# mggg-tooling

./: .gitignore  Original_README.md  README.md  census_adder.py  cvap_docs.md  dedup.py  fifty_states.py  main.py  pyproject.toml  rewriteplan.md
original_examples/: vest-process.sh
tools/: __init__.py  acs_plugin_loader.py  census2019.py  census_adder.py  cvap2019.py  nhgis.py  settings.py  tiger.py
